speed/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speed
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: speed
  template:
    metadata:
      labels:
        app: speed
    spec:
      containers:
        - name: speed
          image: ghcr.io/librespeed/speedtest:latest-alpine
          volumeMounts:
            - mountPath: /database
              name: speed-pvc
      volumes:
        - name: speed-pvc
          persistentVolumeClaim:
            claimName: speed-pvc
