speed/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speed-service
spec:
  selector:
    app: speed
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
